--- a/ProfileWorkareaExample-Midterm/ProfileWorkareaExample/src/UserInterface/WorkAreas/StudentRole/MyProfileWorkResp/StudentMyProfileJPanel.form
+++ b/ProfileWorkareaExample-Midterm/ProfileWorkareaExample/src/UserInterface/WorkAreas/StudentRole/MyProfileWorkResp/StudentMyProfileJPanel.form
@@ -85,6 +85,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtName">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNameActionPerformed"/>
       </Events>
@@ -95,6 +98,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtRole">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnBack">
       <Properties>
